<resources>
    <string name="app_name">Chats-Kotlin</string>

    <string name="default_web_client_id">707830214950-vj4t163p9cluo094bun4vvfq0r995gne.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_Usuarios">Usuarios</string>
    <string name="item_Chats">Chats</string>
    <string name="tv_Titulo">TITULO</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_Login">Login</string>
    <string name="et_Email">Correo Electronico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tiens cuenta?</string>
    <string name="tv_Registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_Cerrar_Sesion">Cerrar Sesion</string>

    <string name="txt_nombres">Nombre:</string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email:</string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor:</string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miemdro desde:</string>
    <string name="tv_t_registro"> -- </string>

    <string name="Txt_titulo_edit">Actualizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>