<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroEmailActivity">

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="15dp"
        android:src="@drawable/registro_usuario"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <!--Nombres-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/et_Nombres"
            android:hint="@string/et_Nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Correo-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Rep_Contra-->
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_R_Password"
            android:hint="@string/et_R_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Boton-->
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_Registrar"
        android:textAllCaps="true"
        android:text="@string/btn_Registrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>